Fixed overflow issues with the bubbles

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -3,3 +3,7 @@
 html{
     overflow: hidden;
 }
+
+body{
+    overflow: hidden;
+}
